[package]
name = "anubis-geo"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-cron-scheduler = "0.14.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time", "signal"] }
tonic = { version = "0.11", features = ["transport", "gzip"] }
prost = "0.12"
maxminddb = "0.26"
moka = { version = "0.12", features = ["sync", "future"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ipnet = { version = "2", features = ["serde"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "any", "time"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
bzip2 = "0.6"
tonic-reflection = "0.11"
tower = "0.4"
prometheus = "0.13"
axum = "0.7"
tokio-metrics = "0.3"

[build-dependencies]
tonic-build = "0.11"
